# demo_RAPiD

./: nvcc.txt  pyproject.toml  requirements.txt
